# typer-app

./: .gitignore  README.md  cookiecutter.json
.github/: dependabot.yml
{{cookiecutter.slug}}/: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONVENTIONS.md  README.md  mise.toml  pyproject.toml
{{cookiecutter.slug}}/src/{{cookiecutter.underscore}}/: __init__.py  main.py  version.py
{{cookiecutter.slug}}/src/{{cookiecutter.underscore}}/example/: __init__.py  print.py
{{cookiecutter.slug}}/src/{{cookiecutter.underscore}}/utils/: __init__.py
{{cookiecutter.slug}}/tests/: __init__.py  test_example_print.py  test_main.py  test_version.py
